# menu-testovoye

./: README.md  manage.py  pyproject.toml
menu/: admin.py  models.py
menu/migrations/: 0001_initial.py
menu/templatetags/: menu_tags.py
menu_testovoye/: asgi.py  settings.py  urls.py  wsgi.py
