[tool.poetry]
name = "menu-testovoye"
version = "0.1.0"
description = ""
authors = ["rukiqq <mitaka@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
